--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="oVqI_bGZlqmgis9fLyHHmPdviPTVJXWmkzaUrib02h8" />
     <meta
       name="description"
       content="A collaborative storytelling game where you are your friends decide the fate of your characters."
